--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <script src="scripts/controllers/homeController.js"></script>
         <script src="scripts/controllers/achievementsController.js"></script>
         <script src="scripts/controllers/blogController.js"></script>
+        <script src="scripts/controllers/githubController.js"></script>
         <script src="scripts/components/navbarComponent/navbarComponent.js"></script>
         <script src="scripts/components/footerComponent/footerComponent.js"></script>
         <script src="scripts/components/resumeCardComponent/resumeCardComponent.js"></script>
