added social pages

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <script src="scripts/controllers/achievementsController.js"></script>
         <script src="scripts/controllers/blogController.js"></script>
         <script src="scripts/controllers/githubController.js"></script>
+        <script src="scripts/controllers/linkedinController.js"></script>
+        <script src="scripts/controllers/instagramController.js"></script>
         <script src="scripts/components/navbarComponent/navbarComponent.js"></script>
         <script src="scripts/components/footerComponent/footerComponent.js"></script>
         <script src="scripts/components/resumeCardComponent/resumeCardComponent.js"></script>
